# OpenGL-ECS-Engine

./: .gitignore  CMakeLists.txt  OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters  vcpkg.json
include/glad/: glad.h
res/shaders/: fragment.glsl  geometry.glsl  vertex.glsl
src/: bLightComponent.cpp  bLightComponent.hpp  components.cpp  components.hpp  engineManager.cpp  engineManager.hpp  entity.cpp  entity.hpp  file.cpp  file.hpp  framebuffer.cpp  framebuffer.hpp  glad.c  includes.hpp  layout.cpp  layout.hpp  logger.cpp  logger.hpp  main.cpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  stb_image.h  texture.cpp  texture.hpp  util.hpp
